# CS160

./: .gitignore  .video.AVI.icloud  Dockerfile  Procfile  README.md  execute.py  final_program.py  points_68.py  requirements.txt  video_processor.py
backend/: db.sqlite3  dump.rdb  ping  requirements.txt
backend/backend/: celery.py  settings.py  urls.py
backend/backend/templates/: base.html  footer.html  header.html  home.html  homepage.html  login.html  main.html  signup.html
backend/backend/templatetags/: user_hash.py
backend/facefinder/: admin.py  apps.py  final_program.py  forms.py  models.py  points_68.py  video_processor.py  views.py
backend/facefinder/core/: final_program.py  points_68.py  runit.sh  video_processor.py
backend/facefinder/core/eyeLike/: .gitignore  eyeLike.py  rebuild.sh  wrapper.py
backend/facefinder/core/eyeLike/src/: CMakeLists.txt  findEyeCenter.cpp  main.cpp  wrapper.cpp
backend/facefinder/migrations/: 0001_initial.py  0002_video_newvideo.py  0003_auto_20171124_0136.py  0004_auto_20171204_0029.py  0005_video_video_roll_pitch_yaw.py
backend/media/documents/: .video_aFstJms.AVI.icloud
backend/static/css/: footer.css  general.css  header.css  home.css  login_form.css  main.css  navbar_menu.css
backend/static/img/: Face Finder.htm
backend/static/img/Face Finder_files/: footer.css  home.css  login_form.css
backend/staticfiles/css/: header.f80c767db366.css  login_form.8e5ac22ecf9d.css
webapp/: index.html
webapp/img/: .background.jpg.icloud
webapp/styles/: project.css
